Thu Jan  4 11:17:12 CET 2007 <Daniel.Diaz@univ-paris1.fr>

	* change error messages emitted by the compiler to follow GNU standards

Fri Dec 22 14:21:26 CET 2006 <Daniel.Diaz@univ-paris1.fr>

	* modify doc (mainly rename manual.xxx to gprolog.xxx)
	* add DESTDIR variable support in main Makefile for staged installs

Fri Dec 15 17:48:30 CET 2006 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug with Prolog floats in x86_64/linux (bad stack alignment)
	* port for ix86/darwin (Mac OS X)

Fri Dec  8 16:59:49 CET 2006 <Daniel.Diaz@univ-paris1.fr>

     	* add check target to main Makefile

Thu Dec  7 14:59:46 CET 2006 <Daniel.Diaz@univ-paris1.fr>


 	* improve Win32 ports (cygwin, MinGW, MSVC 6.0 and 2005 Express Edition)
	  (MSVC port uses MinGW as.exe instead of nasm.exe - named mingw-as.exe

Mon Nov 27 18:38:09 CET 2006 <Daniel.Diaz@univ-paris1.fr>

	* rename call/2 to call_det/2
	* implement call/2-11 as will be defined in the next standard
	
Fri Nov 24 18:38:25 CET 2006 <Daniel.Diaz@univ-paris1.fr>

	* fix various problems when compiling with gcc 4 (gcc 4.1.1)
	* emit .note.GNU-stack to mark the stack as no executable
	  in x86_any.c, x86_64_any.c and powerpc_any.c
	* change the way objects are found (obj_chain.c) using gcc ctors
	* use Doug Lea malloc for OpenBSD (problem with malloc using mmap)
	* fix problems in various ports:
	  alpha/linux, powerpc/darwin (Mac OS X), sparc/solaris, ix86/OpenBSD

Mon Jun 13 15:46:49 CEST 2005 <Daniel.Diaz@univ-paris1.fr>

	* fix 2 bugs in global variables

Mon Jun  7 15:22:44 CEST 2004 <Daniel.Diaz@univ-paris1.fr>

	* fix problem when compiling with gcc 3.4.0

Fri Jun  4 15:16:30 CEST 2004 <Daniel.Diaz@univ-paris1.fr>

	* fix bug in term comparison involving negative integers

Thu Mar 11 16:58:43 CET 2004 <Daniel.Diaz@univ-paris1.fr>

	* add consult, ... and fix minor bugs in the Win32 GUI console menu

Tue Mar  2 15:54:37 CET 2004 <Daniel.Diaz@univ-paris1.fr>

	* fix the stack overflow detection under cygwin