@@ -455,7 +455,7 @@ Call_Prolog_Fail(void)
 {
 #ifdef M_ix86_darwin		/* see comment in Ma2Asm/ix86_any.c */
   asm("subl $4,%esp");
-#elif defined(M_x86_64_linux) 	/* see comment in Ma2Asm/x86_64_any.c */
+#elif defined(M_x86_64) 	/* see comment in Ma2Asm/x86_64_any.c */
   asm("subq $8,%rsp");
 #endif
   Save_Machine_Regs(p_buff_save);
@@ -475,7 +475,7 @@ Call_Prolog_Success(void)
 {
 #ifdef M_ix86_darwin		/* see comment in Ma2Asm/ix86_any.c */
   asm("subl $4,%esp");
-#elif defined(M_x86_64_linux) 	/* see comment in Ma2Asm/x86_64_any.c */
+#elif defined(M_x86_64) 	/* see comment in Ma2Asm/x86_64_any.c */
   asm("subq $8,%rsp");
 #endif
   Save_Machine_Regs(p_buff_save);
