@@ -1,1 +1,1 @@
-gprolog-1.3.0
+gprolog-1.3.1
