@@ -4,7 +4,7 @@
 
 # if you change here the version also change it in PROLOG_VERSION below
 
-AC_INIT(gprolog, 1.3.0, bug-prolog@gnu.org)
+AC_INIT(gprolog, 1.3.1, bug-prolog@gnu.org)
 AC_PREREQ(2.52)
 # AC_CONFIG_AUX_DIR(ConfUtils) to do...
 AC_CONFIG_SRCDIR(SETVARS)
@@ -16,8 +16,8 @@ AC_CONFIG_SRCDIR(SETVARS)
 
 PROLOG_NAME='GNU Prolog'
 PROLOG_NAME1='gprolog'
-PROLOG_VERSION='1.3.0'
-PROLOG_DATE='Jan 4 2007'
+PROLOG_VERSION='1.3.1'
+PROLOG_DATE='Mar 9 2007'
 PROLOG_COPYRIGHT='Copyright (C) 1999-2007 Daniel Diaz'
 
 TOP_LEVEL=$PROLOG_NAME1
@@ -240,9 +240,19 @@ else
     if test "$GCC" != yes; then
         AC_MSG_ERROR([gcc is required (or MSVC++ under win32)])
     fi
-    AS=as
+    case "$host" in
+	x86_64*solaris*)
+	    AS='gas --64'
+        ;;
+	*)
+	    if test "$with_gas" = yes; then
+		AS=gas
+	    else
+		AS=as
+	    fi
+        ;;
+    esac
     AC_PROG_RANLIB
-
     ASM_SUFFIX='.s'
     OBJ_SUFFIX='.o'
     LIB_SUFFIX='.a'
@@ -328,6 +338,7 @@ else
         alpha*osf*)      AC_DEFINE(M_alpha_osf);;
         alpha*linux*)    AC_DEFINE(M_alpha_linux);;
         x86_64*linux*)   AC_DEFINE(M_x86_64_linux);;
+        x86_64*solaris*) AC_DEFINE(M_x86_64_solaris);;
         i*86*linux*)     AC_DEFINE(M_ix86_linux);;
         i*86*solaris*)   AC_DEFINE(M_ix86_solaris);;
         i*86*sco*)       AC_DEFINE(M_ix86_sco);;
@@ -417,6 +428,7 @@ else
         i586*)             CFLAGS_MACHINE='-march=pentium';;
         i*86*)             CFLAGS_MACHINE='-march=i486';;
         powerpc*darwin*)   CFLAGS_MACHINE='-mpowerpc -no-cpp-precomp';;
+        x86_64*solaris*)   CFLAGS_MACHINE='-m64';;
     esac
     
     case "$host" in
