@@ -1,3 +1,10 @@
+Change in GNU Prolog version 1.3.1:
+
+* port to x86_64/Solaris - many thanks to:
+  Scott L. Burson <Scott@coral8.com>
+* fix a bug in arithmetics (mod)
+* fix a bug in the FD solver (under 64 bits machines)
+
 Change in GNU Prolog version 1.3.0:
 
 * official release (Jan 4 2007)
